--- a/webapp/app.component.html
+++ b/webapp/app.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{appVars.Fantasia}}</a>
+      <a class="navbar-brand" href="#">{{appVars.FANTASIA}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
