--- a/webapp/componentes/graph-edit.component.html
+++ b/webapp/componentes/graph-edit.component.html
@@ -29,15 +29,7 @@
                             <span *ngIf="col.esRepetible" class="glyphicon glyphicon-plus pull-right" aria-hidden="true" data-toggle="tooltip" title="Agrega un Serie"></span>
                         </div>
                         <div class="panel-body">
-                            <select class="form-control">
-                                <option value="">Pais</option>
-                                <option value="">Ciudad</option>
-                                <option value="">Comuna</option>
-                                <option value="">Ventas Brutas</option>
-                                <option value="">Ventas Netas</option>
-                                <option value="">N° de Documentos</option>
-                                <option value="">N° de Clientes</option>
-                            </select>
+                            <campos-select></campos-select>
                         </div>
                     </div>
                 </div>
@@ -45,15 +37,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">Columna {{i + 1}}</div>
                         <div class="panel-body">
-                            <select class="form-control">
-                                <option value="">Pais</option>
-                                <option value="">Ciudad</option>
-                                <option value="">Comuna</option>
-                                <option value="">Ventas Brutas</option>
-                                <option value="">Ventas Netas</option>
-                                <option value="">N° de Documentos</option>
-                                <option value="">N° de Clientes</option>
-                            </select>
+                            <campos-select></campos-select>
                         </div>
                     </div>
 
