--- a/webapp/componentes/campos-select.component.html
+++ b/webapp/componentes/campos-select.component.html
@@ -1,5 +1,5 @@
 <div>
-    <select [(ngModel)]="keyValue" (change)="KeyValueChange()">
+    <select [(ngModel)]="ColumnAsignation">
         <optgroup label="Datos de Ventas" *ngIf="columna.dataType.indexOf('number') !== -1">
             <option value="campo-{{CamposNumericos.ventasNetas}}">Ventas Netas</option>
             <option value="campo-{{CamposNumericos.ventasBrutas}}">Ventas Brutas</option>
@@ -20,21 +20,11 @@
             <option value="ItemVentas-{{GrupoItemVentas.nombres}}">Nombre</option>
             <option value="ItemVentas-etiqueta">Etiqueta de Ventas</option>
         </optgroup>
-        <optgroup label="Períodos" *ngIf="columna.dataType.indexOf('string') !== -1 || columna.dataType.indexOf('date') !== -1">
-            <option value="periodo-{{Periodos.diarias}}">Diario</option>
-            <option value="periodo-{{Periodos.semanales}}">Semanal</option>
-            <option value="periodo-{{Periodos.quincenales}}">Quincenal</option>
-            <option value="periodo-{{Periodos.mensuales}}">Mensual</option>
-            <option value="periodo-{{Periodos.bimensuales}}">Bimestral</option>
-            <option value="periodo-{{Periodos.trimestrales}}">Trimestral</option>
-            <option value="periodo-{{Periodos.cuatrimestrales}}">Cuatrimestral</option>
-            <option value="periodo-{{Periodos.semestrales}}">Semestral</option>
-            <option value="periodo-{{Periodos.anuales}}">Anual</option>
-        </optgroup>
+        <option label="Períodos" value="periodo" *ngIf="columna.dataType.indexOf('string') !== -1 || columna.dataType.indexOf('date') !== -1"></option>
         <option value="moneda">Moneda del documento</option>
     </select>
 
-    <select [(ngModel)]="keyValueSerie" *ngIf="columna.esRepetible && keyValue && keyValue.indexOf('campo') === 0">
+    <select [(ngModel)]="keyValueSerie" *ngIf="columna.esRepetible && ColumnAsignation && ColumnAsignation.indexOf('campo') === 0">
         <optgroup label="Crear series por datos de Cliente">
             <option value="receptor-{{GrupoReceptor.clientes}}">Razon Social - RUT</option>
             <option value="receptor-{{GrupoReceptor.paises}}">País</option>
@@ -53,10 +43,10 @@
         </optgroup>
     </select>
 
-    <div *ngIf="keyValue && keyValue.indexOf('periodo') === 0">
+    <div *ngIf="ColumnAsignation && ColumnAsignation.indexOf('periodo') === 0">
         Seleccionemos la clase de periodos
     </div>
-    <div *ngIf="keyValue === 'moneda'">
+    <div *ngIf="ColumnAsignation === 'moneda'">
         Seleccionemos las monedas
     </div>
 </div>
